# openmp-graph

./: .gitignore  Makefile  README.md  argparse.c  argparse.h  graph.h  graphgen.c  graphgen.h  utils.h  vertex_coloring.java  vertexcol.c
HJ-programs/: byzantine.java  dominatingSet.java  leader_elect_lcr.java  mst.java
bellman-ford/: a.out  bellman-ford.c
leader-elect-lcr/: README.md  a.out  leader_elect_lcr.c
mis/: Makefile  README.md  argparse.c  graphgen.c  mis  mis.c  mis.hj  utils.c
src/: CMakeLists.txt  bellman_ford.c  bfs_dijkstra.c  build  byzantine.c  config.h  dominating_set.c  gentest.c  kcommittee.c  leader_elect_dp.c  leader_elect_hs.c  leader_elect_lcr.c  mis.c  mst.c  run_tests  session.vim  vertex_coloring.c
src/ompdist/: CMakeLists.txt  election.c  election.h  graph.c  graph.h  graph_gen.c  locks.c  queues.c  tree_gen.c  utils.c  utils.h  vector.c  vector.h
test-data/: outputvertexColoring_128_-chain.txt  outputvertexColoring_128_-star.txt  outputvertexColoring_16_max.txt  outputvertexColoring_512_-chain.txt  outputvertexColoring_64_-rn.txt  outputvertexColoring_64_-star.txt
vertex-coloring/: Makefile  README.md  argparse.c  argparse.h  graph.c  graph.h  graphgen.h  tests.py  utils.h  vertexcol.c
vertex-coloring/test-data/: outputvertexColoring_16_min.txt  outputvertexColoring_256_-chain.txt  outputvertexColoring_256_-star.txt  outputvertexColoring_32_max.txt  outputvertexColoring_32_min.txt  outputvertexColoring_512_-star.txt  outputvertexColoring_64_-chain.txt  outputvertexColoring_8_-max.txt  outputvertexColoring_8_-min.txt
